quick dutch translations for notifications

--- a/war/js/views/messages-scheadule-item.html
+++ b/war/js/views/messages-scheadule-item.html
@@ -6,37 +6,37 @@
   <ul>
     <li>
       <label for="monday-{{s.exact}}">
-        <input type="checkbox" id="monday-{{s.exact}}" ng-model="s.mon">&nbsp;Monday
+        <input type="checkbox" id="monday-{{s.exact}}" ng-model="s.mon">&nbsp;maandag
       </label>
     </li>
     <li>
       <label for="tuesday-{{s.exact}}">
-        <input type="checkbox" id="tuesday-{{s.exact}}" ng-model="s.tue">&nbsp;Tuesday
+        <input type="checkbox" id="tuesday-{{s.exact}}" ng-model="s.tue">&nbsp;dinsdag
       </label>
     </li>
     <li>
       <label for="wednesday-{{s.exact}}">
-        <input type="checkbox" id="wednesday-{{s.exact}}" ng-model="s.wed">&nbsp;Wednesday
+        <input type="checkbox" id="wednesday-{{s.exact}}" ng-model="s.wed">&nbsp;woensdag
       </label>
     </li>
     <li>
       <label for="thursday-{{s.exact}}">
-        <input type="checkbox" id="thursday-{{s.exact}}" ng-model="s.thu">&nbsp;Thursday
+        <input type="checkbox" id="thursday-{{s.exact}}" ng-model="s.thu">&nbsp;donderdag
       </label>
     </li>
     <li>
       <label for="friday-{{s.exact}}">
-        <input type="checkbox" id="friday-{{s.exact}}" ng-model="s.fri">&nbsp;Friday
+        <input type="checkbox" id="friday-{{s.exact}}" ng-model="s.fri">&nbsp;vrijdag
       </label>
     </li>
     <li>
       <label for="saturday-{{s.exact}}">
-        <input type="checkbox" id="saturday-{{s.exact}}" ng-model="s.sat">&nbsp;Saturday
+        <input type="checkbox" id="saturday-{{s.exact}}" ng-model="s.sat">&nbsp;zaterdag
       </label>
     </li>
     <li>
       <label for="sunday-{{s.exact}}">
-        <input type="checkbox" id="sunday-{{s.exact}}" ng-model="s.sun">&nbsp;Sunday
+        <input type="checkbox" id="sunday-{{s.exact}}" ng-model="s.sun">&nbsp;zondag
       </label>
     </li>
     <li><i class="icon-calendar"></i></li>
