email sender & download mobile app functionality without apk and the email content

--- a/war/js/views/login.html
+++ b/war/js/views/login.html
@@ -98,11 +98,11 @@
 
 
 <!-- download mobile app -->
-<div id="download">
+<!-- <div id="download">
 	<button class="btn btn-success btn-large" type="button" bs-tooltip="ui.downloads.app">
 		{{ui.login.downloadApp}}
 	</button>
-</div>
+</div> -->
 <!-- end download mobile app -->
 
 
