planboard -> agenda in localization

--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -519,7 +519,7 @@
           <!-- planbaord footer -->
           <p>
             <small class="pull-left">
-              <span class="text-warning">{{ui.planboard.lastSyncTime}}</span>
+              <span class="text-warning">{{ui.planboard.lastSyncTime}}</span>&nbsp;
               <span class="muted">{{data.synced | nicelyDate}}</span>
             </small>
             <small class="pull-right">
@@ -709,7 +709,7 @@
           <!-- planbaord footer -->
           <p>
             <small class="pull-left">
-              <span class="text-warning">{{ui.planboard.lastSyncTime}} </span>
+              <span class="text-warning">{{ui.planboard.lastSyncTime}}</span>&nbsp;
               <span class="muted">{{data.synced | nicelyDate}}</span>
             </small>
             <small class="pull-right">
