--- a/war/js/views/help.html
+++ b/war/js/views/help.html
@@ -15,30 +15,53 @@
 
     <!-- tabs -->
     <ul class="nav nav-tabs nav-tabs-app" style="margin-right: 0px;">
-      <li class="active">
-        <a href="#dashboardTab" data-toggle="tab"><span class="entypo">&#9716;</span> Dashboard</a>
+
+      <li class="{{(views.dashboard==true) && 'active'}}">
+        <a  href="#dashboardTab" 
+            data-toggle="tab"
+            ng-click="setViewTo('dashboard')"><span class="entypo">&#9716;</span> Dashboard</a>
       </li>
-      <li>
-        <a href="#planboardTab" data-toggle="tab"><span class="entypo">&#128340;</span> {{ui.planboard.planboard}}</a>
+
+      <li class="{{(views.planboard==true) && 'active'}}">
+        <a  href="#planboardTab" 
+            data-toggle="tab"
+            ng-click="setViewTo('planboard')"><span class="entypo">&#128340;</span> {{ui.planboard.planboard}}</a>
       </li>
+
       <!-- <li>
         <a href="#statisticsTab" data-toggle="tab"><span class="entypo">&#128200;</span> {{ui.planboard.statistics}}</a>
       </li> -->
-      <li>
-        <a href="#messagesTab" data-toggle="tab"><span class="entypo">&#9993;</span> {{ui.message.messages}}</a>
+
+      <li class="{{(views.messages==true) && 'active'}}">
+        <a  href="#messagesTab" 
+            data-toggle="tab"
+            ng-click="setViewTo('messages')"><span class="entypo">&#9993;</span> {{ui.message.messages}}</a>
       </li>
-      <li>
-        <a href="#groupsTab" data-toggle="tab"><span class="entypo">&#128101;</span> {{ui.groups.groups}}</a>
+
+      <li class="{{(views.groups==true) && 'active'}}">
+        <a  href="#groupsTab" 
+            data-toggle="tab"
+            ng-click="setViewTo('groups')"><span class="entypo">&#128101;</span> {{ui.groups.groups}}</a>
       </li>
-      <li>
-        <a href="#profileTab" data-toggle="tab"><span class="entypo">&#128100;</span> {{ui.profile.profile}}</a>
+
+      <li class="{{(views.profile==true) && 'active'}}">
+        <a  href="#profileTab" 
+            data-toggle="tab"
+            ng-click="setViewTo('profile')"><span class="entypo">&#128100;</span> {{ui.profile.profile}}</a>
       </li>
-      <li>
-        <a href="#settingsTab" data-toggle="tab"><span class="entypo">&#9881;</span> {{ui.settings.settings}}</a>
+
+      <li class="{{(views.settings==true) && 'active'}}">
+        <a  href="#settingsTab" 
+            data-toggle="tab"
+            ng-click="setViewTo('settings')"><span class="entypo">&#9881;</span> {{ui.settings.settings}}</a>
       </li>
-      <li>
-        <a href="#supportTab" data-toggle="tab"><span class="entypo">&#59272;</span> {{ui.help.support}}</a>
+
+      <li class="{{(views.support==true) && 'active'}}">
+        <a  href="#supportTab" 
+            data-toggle="tab"
+            ng-click="setViewTo('support')"><span class="entypo">&#59272;</span> {{ui.help.support}}</a>
       </li>
+
     </ul>
     <!-- end tabs -->
 
@@ -51,7 +74,7 @@
 
 
       <!-- dashboardTab -->
-      <div class="tab-pane active" id="dashboardTab">
+      <div class="tab-pane {{(views.dashboard == true == true) && 'active'}}" id="dashboardTab">
         <div class="tab-header">
           <h3 class="pull-left">Dashboard</h3>
         </div>
@@ -81,7 +104,7 @@
 
 
       <!-- planboardTab -->
-      <div class="tab-pane" id="planboardTab">
+      <div class="tab-pane {{(views.planboard == true == true) && 'active'}}" id="planboardTab">
         <div class="tab-header">
           <h3 class="pull-left">{{ui.planboard.planboard}}</h3>
         </div>
@@ -140,7 +163,7 @@
 
 
       <!-- messagesTab -->
-      <div class="tab-pane" id="messagesTab">
+      <div class="tab-pane {{(views.messages == true == true) && 'active'}}" id="messagesTab">
         <div class="tab-header">
           <h3 class="pull-left">{{ui.message.messages}}</h3>
         </div>
@@ -202,7 +225,7 @@
 
 
       <!-- groupsTab -->
-      <div class="tab-pane" id="groupsTab">
+      <div class="tab-pane {{(views.groups == true == true) && 'active'}}" id="groupsTab">
         <div class="tab-header">
           <h3 class="pull-left">{{ui.groups.groups}}</h3>
         </div>
@@ -249,13 +272,13 @@
 
 
       <!-- profileTab -->
-      <div class="tab-pane" id="profileTab">
+      <div class="tab-pane {{(views.profile == true == true) && 'active'}}" id="profileTab">
         <div class="tab-header">
           <h3 class="pull-left">{{ui.profile.profile}}</h3>
         </div>
         <hr>
 
-        <p>U kunt uw tonen door in het tablad ‘Profiel’ te selecteren op uw naam rechts bovenin het scherm . U krijgt dan een overzicht te zien van uw eigen gegevens. Dit overzicht bevat informatie over de groepen waarvan uw onderdeel uitmaakt, uw naam, telefoonnummer, email en adres.</p>
+        <p>U kunt uw tonen door in het tablad ‘Profiel’ te selecteren op uw naam rechts bovenin het scherm. U krijgt dan een overzicht te zien van uw eigen gegevens. Dit overzicht bevat informatie over de groepen waarvan uw onderdeel uitmaakt, uw naam, telefoonnummer, email en adres.</p>
 
         <p>Voor het aanpassen van deze gegeven, klikt u op het tablad wijzigen. U krijgt dan het overzicht te zien van de gegevens met de mogelijkheid deze velden aan te passen. U drukt na het maken van de wijzigingen op ‘Profiel Opslaan’.</p>
       </div>
@@ -265,7 +288,7 @@
 
 
       <!-- settingsTab -->
-      <div class="tab-pane" id="settingsTab">
+      <div class="tab-pane {{(views.settings == true == true) && 'active'}}" id="settingsTab">
         <div class="tab-header">
           <h3 class="pull-left">{{ui.settings.settings}}</h3>
         </div>
@@ -284,7 +307,7 @@
 
 
       <!-- supportTab -->
-      <div class="tab-pane" id="supportTab">
+      <div class="tab-pane {{(views.support == true == true) && 'active'}}" id="supportTab">
         <div class="tab-header">
           <h3 class="pull-left">{{ui.help.support}}</h3>
         </div>
