hotfix for hiding member timelines in gvrb

--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -445,6 +445,11 @@
                           class="btn {{(timeline.current.layouts.members==true) && 'active'}}" 
                           ng-click="requestTimeline('members')"
                           ng-show="timeline.config.layouts.members">{{ui.planboard.members}}</button>
+                  <button type="button" 
+                          ng-model="timeline.current.layouts.members" 
+                          class="btn {{(timeline.current.layouts.members==true) && 'active'}}" 
+                          ng-click="requestTimeline('members')"
+                          ng-show="app.resources.role < 3">{{ui.planboard.members}}</button>
                 </div>
                 <!-- end timeline layout manager -->
 
@@ -584,6 +589,11 @@
                         class="btn {{(timeline.current.layouts.members==true) && 'active'}}" 
                         ng-click="requestTimeline('members')"
                         ng-show="timeline.config.layouts.members">{{ui.planboard.members}}</button>
+                <button type="button" 
+                        ng-model="timeline.current.layouts.members" 
+                        class="btn {{(timeline.current.layouts.members==true) && 'active'}}" 
+                        ng-click="requestTimeline('members')"
+                        ng-show="app.resources.role < 3">{{ui.planboard.members}}</button>
               </div>
               <!-- end timeline layout manager -->
 
