feedback on changing timeslot on slot form & auto-refresher blocker on planboard & deployment on all live instances

--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -21,6 +21,10 @@
 
 
 
+  <!-- started: {{app.preloader.started}}<br>
+  stopped: {{app.preloader.stopped}}<br>
+  result:  {{app.preloader.stopped - app.preloader.started}} -->
+
 
 
   <!-- timeline controls -->
