--- a/sass/app/_timeline.scss
+++ b/sass/app/_timeline.scss
@@ -719,6 +719,13 @@ div.timeline-event.state-unavailable {
 }
 
 
+div.timeline-event.state-new {
+    margin:0;
+    background-color: #ddd;
+    text-indent: -9999px;
+}
+
+
 
 
 
