--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -182,7 +182,7 @@
             ng-show="config.profile.p2000.status">
 
         <div class="head">
-          <h4>{{ui.dashboard.announcements}} {{loading.alerts}}</h4>
+          <h4>{{ui.dashboard.announcements}}</h4>
           <!-- <button class="btn btn-small"><i class="icon-cog"></i></button> -->
         </div>
         <hr>
