pre-branching for bulk slot operations

--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -248,6 +248,7 @@
         <label>{{ui.planboard.state}}</label>
         <select ng-model="slot.state" 
                 ng-options="option as value for (option, value) in states" 
+                ng-change="modifySlot(slot)" 
                 ng-show="views.slot.add || views.slot.edit">
           <option value="">{{ui.planboard.selectAState}}</option>
         </select>
