--- a/war/js/views/groups-wish.html
+++ b/war/js/views/groups-wish.html
@@ -7,11 +7,11 @@
 
           <button type="button" 
                   class="btn btn-primary btn-small" 
-                  ng-click="saveWish(popover.id, popover.wish); dismiss()">Save</button>
+                  ng-click="saveWish(popover.id, popover.wish); dismiss()">Opslaan</button>
 
           <button type="button" 
                   class="btn btn-small" 
-                  ng-click="dismiss()">Close</button>
+                  ng-click="dismiss()">Annuleren</button>
         </div>
       </div>
     </fieldset>
