--- a/war/js/views/login.html
+++ b/war/js/views/login.html
@@ -3,7 +3,7 @@
 	<!-- preloader -->
 	<div id="preloader">
 		<img ng-src="{{config.profile.logos.login}}" alt="{{config.profile.title}}" />
-	  <h4>Setting up the application</h4>
+	  <h4>{{ui.login.setting_up_app}}</h4>
 	  <div class="progress progress-striped active" class="span3">
 	    <div class="bar"></div>
 	  </div>
