--- a/war/js/views/logout.html
+++ b/war/js/views/logout.html
@@ -2,7 +2,7 @@
 	<!-- loggin-out -->
 	<div id="loading">
 	  <span class="entypo">&#9203;</span>
-    <p>Loggin out..</p>
+    <p>Aan het uitloggen...</p>
 	</div>
 	<!-- end loggin-out -->
 </div>
