--- a/war/js/views/dashboard-pies.html
+++ b/war/js/views/dashboard-pies.html
@@ -23,11 +23,11 @@
 
     <button type="button" 
             class="btn btn-small" 
-            ng-click="dismiss()">Close</button>
+            ng-click="dismiss()">Annuleren</button>
 
     <button type="button" 
             class="btn btn-primary btn-small" 
-            ng-click="saveOverviewWidget(popover.selection); dismiss()">Save changes</button>
+            ng-click="saveOverviewWidget(popover.selection); dismiss()">Opslaan</button>
 
   </div>
 </section>
