--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -457,7 +457,7 @@
 
           <span class="muted pull-right">
             <!-- <small><i>Page: {{page.inbox + 1}} of {{messages.inbox.length}}, {{(messages.inbox | filter:query.inbox).length | i18n_spec:'message.someMessage'}} </i></small> -->
-            <small><i>Pagina: {{page.inbox + 1}} of {{messages.inbox.length}}, in totaal: {{messages.inbox | countBox}} </i></small>
+            <small><i>Pagina: {{page.inbox + 1}} van {{messages.inbox.length}}, in totaal: {{messages.inbox | countBox}} </i></small>
           </span>
 
         </div>
@@ -556,7 +556,7 @@
           <br><br>
 
           <span class="muted pull-right">
-            <small><i>Pagina: {{page.outbox + 1}} of {{messages.outbox.length}}, in totaal: {{messages.outbox | countBox}}</i></small>
+            <small><i>Pagina: {{page.outbox + 1}} van {{messages.outbox.length}}, in totaal: {{messages.outbox | countBox}}</i></small>
           </span>
 
         </div>
@@ -740,7 +740,7 @@
           <br><br>
 
           <span class="muted pull-right">
-            <small><i>Pagina: {{page.trash + 1}} of {{messages.trash.length}}, in totaal: {{messages.trash | countBox}}</i></small>
+            <small><i>Pagina: {{page.trash + 1}} van {{messages.trash.length}}, in totaal: {{messages.trash | countBox}}</i></small>
           </span>
 
         </div>
