--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -644,13 +644,13 @@
                       <span class="percentage">%</span>
                     </div>
                     <div class="info">                    
-                      <h4>More people than expected</h4>
-                      <h5>{{data.aggs.durations.more | calculateTimeInDays}}</h5> 
-                      <small class="muted">days</small>, 
-                      <h5>{{data.aggs.durations.more | calculateTimeInHours}}</h5> 
-                      <small class="muted">hours</small>, 
-                      <h5>{{data.aggs.durations.more | calculateTimeInMinutes}}</h5> 
-                      <small class="muted">minutes</small>
+                      <h4>Meer mensen</h4>
+                      <h5>{{data.aggs.durations.more | calculateTimeInDays}}</h5>&nbsp;
+                      <small class="muted">dagen</small>,&nbsp;
+                      <h5>{{data.aggs.durations.more | calculateTimeInHours}}</h5>&nbsp;
+                      <small class="muted">uren</small>,&nbsp;
+                      <h5>{{data.aggs.durations.more | calculateTimeInMinutes}}</h5>&nbsp;
+                      <small class="muted">minuten</small>
                     </div>
                   </li>
                   <li>
@@ -659,13 +659,13 @@
                       <span class="percentage">%</span>
                     </div>
                     <div class="info">                    
-                      <h4>Just as many people as wished</h4>
-                      <h5>{{data.aggs.durations.even | calculateTimeInDays}}</h5> 
-                      <small class="muted">days</small>, 
-                      <h5>{{data.aggs.durations.even | calculateTimeInHours}}</h5> 
-                      <small class="muted">hours</small>, 
-                      <h5>{{data.aggs.durations.even | calculateTimeInMinutes}}</h5> 
-                      <small class="muted">minutes</small>
+                      <h4>Precies genoeg mensen</h4>
+                      <h5>{{data.aggs.durations.even | calculateTimeInDays}}</h5>&nbsp;
+                      <small class="muted">dagen</small>,&nbsp;
+                      <h5>{{data.aggs.durations.even | calculateTimeInHours}}</h5>&nbsp;
+                      <small class="muted">uren</small>,&nbsp;
+                      <h5>{{data.aggs.durations.even | calculateTimeInMinutes}}</h5>&nbsp;
+                      <small class="muted">minuten</small>
                     </div>
                   </li>
                   <li>
@@ -674,13 +674,13 @@
                       <span class="percentage">%</span>
                     </div>
                     <div class="info">
-                      <h4>Less people than expected</h4>
-                      <h5>{{data.aggs.durations.less | calculateTimeInDays}}</h5> 
-                      <small class="muted">days</small>, 
-                      <h5>{{data.aggs.durations.less | calculateTimeInHours}}</h5> 
-                      <small class="muted">hours</small>, 
-                      <h5>{{data.aggs.durations.less | calculateTimeInMinutes}}</h5> 
-                      <small class="muted">minutes</small>
+                      <h4>Te weinig mensen</h4>
+                      <h5>{{data.aggs.durations.less | calculateTimeInDays}}</h5>&nbsp;
+                      <small class="muted">dagen</small>,&nbsp;
+                      <h5>{{data.aggs.durations.less | calculateTimeInHours}}</h5>&nbsp;
+                      <small class="muted">uren</small>,&nbsp;
+                      <h5>{{data.aggs.durations.less | calculateTimeInMinutes}}</h5>&nbsp;
+                      <small class="muted">minuten</small>
                     </div>
                   </li>
                 </ul>
