--- a/sass/app/_timeline.scss
+++ b/sass/app/_timeline.scss
@@ -205,6 +205,18 @@
           filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffa93232', 
           endColorstr='#ff8f2b2b', GradientType=0);  
         }
+
+        .bar-Unreached {
+          background-color: #65619b;
+          background-image: -moz-linear-gradient(top, #65619b, #514E7C);
+          background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#65619b), to(#514E7C));
+          background-image: -webkit-linear-gradient(top, #65619b, #514E7C);
+          background-image: -o-linear-gradient(top, #65619b, #514E7C);
+          background-image: linear-gradient(to bottom, #65619b, #514E7C);
+          background-repeat: repeat-x;
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff65619b', 
+          endColorstr='#ff514E7C', GradientType=0);  
+        }
       }
 
     }
