--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -168,6 +168,17 @@
                       value="{{data.resources.PostCity}}">
             </div>
           </div>
+
+          <div class="control-group" ng-hide="app.resources.role > 1">
+            <label class="control-label">Wachtwoord</label>
+            <div class="controls">
+              <input  type="text" 
+                      class="span3" 
+                      ng-model="profilemeta.Password">
+              <span class="help-block" style="margin-top: -5px;"><small><i>Let op! Hiermee wijzigt u het wachtwoord van deze persoon.</i></small></span>
+            </div>
+          </div>
+
           <div class="form-actions">
             <button   type="submit" 
                       class="btn btn-success"
