--- a/war/js/views/groups-wish.html
+++ b/war/js/views/groups-wish.html
@@ -7,11 +7,12 @@
 
           <button type="button" 
                   class="btn btn-primary btn-small" 
-                  ng-click="saveWish(popover.id, popover.wish); dismiss()">Opslaan</button>
+                  ng-click="saveWish(popover.id, popover.wish); dismiss()">{{ui.groups.widgetSave}}</button>
 
           <button type="button" 
                   class="btn btn-small" 
-                  ng-click="dismiss()">Annuleren</button>
+                  ng-click="dismiss()">{{ui.groups.widgetCancel}}</button>
+                  
         </div>
       </div>
     </fieldset>
