--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -372,7 +372,7 @@
                   style="margin-right:5px"
                   bs-popover="'dist/views/groups-wish.html'" 
                   data-placement="bottom"
-                  data-title="Behoefte wijzigen"><span class="badge badge-inset" ng-show="wished">{{wish}}</span>&nbsp;Behoefte</button>
+                  data-title="Behoefte wijzigen"><span class="badge badge-inset" ng-show="wished">{{wish}}</span>&nbsp;{{ui.groups.requiredPeople}}</button>
 
           <button type="button" 
                   ng-click="editGroup(group)" 
