--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -2,13 +2,9 @@
 
 
 
-
-
-
-
   <!-- page header -->
   <div class="page-header">
-    <h2>Agenda</h2>
+    <h2>{{ui.planboard.planboard}}</h2>
     <div class="btn-group pull-right">
       <button type="submit" 
               ng-click="toggleSlotForm()" 
@@ -18,12 +14,6 @@
   <!-- end page header -->
 
 
-
-
-
-  <!-- started: {{app.preloader.started}}<br>
-  stopped: {{app.preloader.stopped}}<br>
-  result:  {{app.preloader.stopped - app.preloader.started}} -->
 
 
 
@@ -448,7 +438,8 @@
                           ng-model="timeline.current.layouts.members" 
                           class="btn {{(timeline.current.layouts.members==true) && 'active'}}" 
                           ng-click="requestTimeline('members')"
-                          ng-show="(app.resources.role < 3) || timeline.config.layouts.members">{{ui.planboard.members}}</button>
+                          ng-show="(app.resources.role < 3) || timeline.config.layouts.members">{{ui.planboard.members}}
+                  </button>
                 </div>
                 <!-- end timeline layout manager -->
 
@@ -587,7 +578,8 @@
                         ng-model="timeline.current.layouts.members" 
                         class="btn {{(timeline.current.layouts.members==true) && 'active'}}" 
                         ng-click="requestTimeline('members')"
-                        ng-show="(app.resources.role < 3) || timeline.config.layouts.members">{{ui.planboard.members}}</button>
+                        ng-show="(app.resources.role < 3) || timeline.config.layouts.members">{{ui.planboard.members}}
+                </button>
               </div>
               <!-- end timeline layout manager -->
 
@@ -635,7 +627,7 @@
               <div id="groupPie"></div>
               
               <div class="groupStatInfo">
-                <h3>{{data.aggs.id|groupIdToName}}</h3>
+                <h3>{{data.aggs.id | groupIdToName}}</h3>
                 <hr>
                 <ul>
                   <li>
@@ -644,13 +636,13 @@
                       <span class="percentage">%</span>
                     </div>
                     <div class="info">                    
-                      <h4>Meer mensen</h4>
+                      <h4>{{ui.planboard.statPeopleMore}}</h4>
                       <h5>{{data.aggs.durations.more | calculateTimeInDays}}</h5>&nbsp;
-                      <small class="muted">dagen</small>,&nbsp;
+                      <small class="muted">{{ui.planboard.statDays}}</small>,&nbsp;
                       <h5>{{data.aggs.durations.more | calculateTimeInHours}}</h5>&nbsp;
-                      <small class="muted">uren</small>,&nbsp;
+                      <small class="muted">{{ui.planboard.statHours}}</small>,&nbsp;
                       <h5>{{data.aggs.durations.more | calculateTimeInMinutes}}</h5>&nbsp;
-                      <small class="muted">minuten</small>
+                      <small class="muted">{{ui.planboard.statMinutes}}</small>
                     </div>
                   </li>
                   <li>
@@ -659,13 +651,13 @@
                       <span class="percentage">%</span>
                     </div>
                     <div class="info">                    
-                      <h4>Precies genoeg mensen</h4>
+                      <h4>{{ui.planboard.statPeopleEven}}</h4>
                       <h5>{{data.aggs.durations.even | calculateTimeInDays}}</h5>&nbsp;
-                      <small class="muted">dagen</small>,&nbsp;
+                      <small class="muted">{{ui.planboard.statDays}}</small>,&nbsp;
                       <h5>{{data.aggs.durations.even | calculateTimeInHours}}</h5>&nbsp;
-                      <small class="muted">uren</small>,&nbsp;
+                      <small class="muted">{{ui.planboard.statHours}}</small>,&nbsp;
                       <h5>{{data.aggs.durations.even | calculateTimeInMinutes}}</h5>&nbsp;
-                      <small class="muted">minuten</small>
+                      <small class="muted">{{ui.planboard.statMinutes}}</small>
                     </div>
                   </li>
                   <li>
@@ -674,13 +666,13 @@
                       <span class="percentage">%</span>
                     </div>
                     <div class="info">
-                      <h4>Te weinig mensen</h4>
+                      <h4>{{ui.planboard.statPeopleLess}}</h4>
                       <h5>{{data.aggs.durations.less | calculateTimeInDays}}</h5>&nbsp;
-                      <small class="muted">dagen</small>,&nbsp;
+                      <small class="muted">{{ui.planboard.statDays}}</small>,&nbsp;
                       <h5>{{data.aggs.durations.less | calculateTimeInHours}}</h5>&nbsp;
-                      <small class="muted">uren</small>,&nbsp;
+                      <small class="muted">{{ui.planboard.statHours}}</small>,&nbsp;
                       <h5>{{data.aggs.durations.less | calculateTimeInMinutes}}</h5>&nbsp;
-                      <small class="muted">minuten</small>
+                      <small class="muted">{{ui.planboard.statMinutes}}</small>
                     </div>
                   </li>
                 </ul>
