--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -170,12 +170,14 @@
           </div>
 
           <div class="control-group" ng-hide="app.resources.role > 1">
-            <label class="control-label">Wachtwoord</label>
+            <label class="control-label">{{ui.profile.password}}</label>
             <div class="controls">
               <input  type="text" 
                       class="span3" 
                       ng-model="profilemeta.Password">
-              <span class="help-block" style="margin-top: -5px;"><small><i>Let op! Hiermee wijzigt u het wachtwoord van deze persoon.</i></small></span>
+              <span class="help-block" style="margin-top: -5px;">
+                <small><i>{{ui.profile.passwordChangeWarning}}</i></small>
+              </span>
             </div>
           </div>
 
